Puts Projects above Timeline and fixes spacing and margin in the ProjectCard

--- a/src/components/ProjectCard.scss
+++ b/src/components/ProjectCard.scss
@@ -5,6 +5,7 @@
   max-width: 28rem;
   text-align: left;
   padding: 1rem;
+  margin-left: 2rem;
   .title {
     font-size: 2rem;
     font-weight: 600;
